--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,27 +1,30 @@
-<%= form_with(model: article) do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+<div class="container ">
+   <%= form_with(model: @article, class: "shadow p-4 mb-2 bg-info rounded", local: true) do |f| %>
+    <div class="row justify-content-center">
+      <div class="col-10">
+        <%=render 'shared/errors'%>
+        <div class="form-group row">
+          <%= f.label :title, class: "col-2 col-form-label" %>
+          <div class="col=10">
+            <%= f.text_field :title, class: "form-control shadow rounded" %>
+          </div>
+        </div>
 
-      <ul>
-        <% article.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+        <div class="form-group row">
+          <%= f.label :description, class: "col-2 col-form-label" %>
+          <div class="col=10">
+            <%= f.text_area :description, rows: 10, class: "form-control mb-3 shadow rounded" %>
+          </div> 
+        </div>
+
+        <div class="form-group row">
+          <%= f.submit class: "btn btn-outline-light btn-lg" %>
+        </div>
+      </div>
+    </div>  
+
   <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+  <div class="mb-3">
+   <%= link_to '[ Cancel and back to article list ]', articles_path %>
   </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
