--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column">
+    <%= render "layouts/navigation"%>
     <%= yield %>
-  </body>
+     <%= render "layouts/footer"%>
+   </body>
+
+   
 </html>
