--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,11 @@
-<h1> Home page for alpha-blog </h1>
+<div id="page-content">
+  <div class="container" id="home-container">
+	  <div class="card text-center text-white" id="withpicture">
+	  	<div class="card-body">
+			  <h5 class="card-title">Alpha Blog</h5>
+			  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+			  <a href="#" class="btn btn-success">Sing Up</a>
+		  </div>
+	  </div>
+  </div>
+</div>
