--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,7 +2,7 @@
    <%= form_with(model: @article, class: "shadow p-4 mb-2 bg-info rounded", local: true) do |f| %>
     <div class="row justify-content-center">
       <div class="col-10">
-        <%=render 'shared/errors'%>
+        <%=render 'shared/errors', obj: @article %>
         <div class="form-group row">
           <%= f.label :title, class: "col-2 col-form-label" %>
           <div class="col=10">
