--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,8 @@
 	  	<div class="card-body">
 			  <h5 class="card-title">Alpha Blog</h5>
 			  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			  <a href="#" class="btn btn-success">Sing Up</a>
+			  <%= link_to 'Sing Up', signup_path, class: "btn btn-success"%>
+			  
 		  </div>
 	  </div>
   </div>
