--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,13 @@
 <p id="notice"><%= notice %></p>
+
+ <div class="flickr_pagination">
+    <div class="page_info">
+      <%= page_entries_info @rticles %>
+    </div>
+    <%= will_paginate @prticles, :container => false %>
+  </div>
+
+
 <h1 class="text-center mt-4" >Listing All Articles</h1>
 <div class="container">
   <% @articles.each do |article| %>
@@ -6,14 +15,18 @@
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-header">
-            by <%= article.user.username if article.user %>
+            <% if article.user%>
+             by <%=link_to article.user.username, user_path(article.user)%>
+            <%end%>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success"  %></h5>
             <p class="card-text"><%= truncate(article.description, length: 100) %></p>
             <%= link_to 'Show', article, class: "btn btn-outline-primary" %>
-            <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-success" %>
-            <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
+              <% if logged_in? && article.user == current_user%>
+                <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-success" %>
+                <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
+              <% end%>
           </div>
           <div class="card-footer text-muted">
             <small>Cerated <%= time_ago_in_words(article.created_at)%> ago   Updated <%= time_ago_in_words(article.updated_at)%> ago</small>
@@ -23,4 +36,11 @@
     </div>
   <%end%>
 </div>
+
+ <div class="flickr_pagination">
+    <%= will_paginate @prticles, :container => false %>
+  </div>
+
+
+
 <%= link_to 'New Article', new_article_path %>
