--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,11 +6,14 @@
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header">
           by <%= @article.user.username if @article.user %>
+          <%=link_to gravatar_for(@article.user, size: 30), user_path(@article.user)%>
         </div>
         <div class="card-body">
           <div class="card-text"><%= simple_format(@article.description) %></div>
-          <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
-          <%= link_to 'Destroy', @article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
+           <% if logged_in? && @article.user == current_user%>
+             <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
+             <%= link_to 'Destroy', @article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
+           <%end%>
         </div>
         <div class="card-footer text-muted">
           <small>Cerated <%= time_ago_in_words(@article.created_at)%> ago   Updated <%= time_ago_in_words(@article.updated_at)%> ago</small>
