--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,22 +7,53 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <%= link_to 'Bloggers', users_path, class: "nav-link"%>
         </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Articles
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <% if logged_in?%>
+              <li><%= link_to 'New article', new_article_path, class:"dropdown-item"%></li>
+            <%end%>
             <li><%= link_to 'Articles list', articles_path, class: "dropdown-item"%></li>
-            <li><%= link_to 'New article', new_article_path, class:"dropdown-item"%></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+               
+        <% if logged_in? %>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= "(Admin)" if current_user.admin?%> Profile [<%= current_user.username%>]
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown"> 
+            <li><%= link_to 'View Profile', user_path(current_user), class:"dropdown-item"%></li>
+            <li><%= link_to 'Edit Profile', edit_user_path(current_user), class: "dropdown-item"%></li>
+            <li><%= link_to 'Delete Profile', user_path(current_user), method: :delete , class: "dropdown-item text-danger", data: {confirm: "Are you sure "} %></li>
+          </ul>
         </li>
+
+
+
+          <li class="nav-item">
+            <%= link_to 'LogOut', logout_path, class: "nav-link", method: :delete %>
+          </li>
+        <%else%>
+           <li class="nav-item">
+             <%= link_to 'Log In', login_path, class: "nav-link"%>
+           </li>
+           <li class="nav-item">
+             <%= link_to 'Sing Up', signup_path, class: "nav-link"%>
+           </li>
+        <%end%>
+       
+       
+
+
+
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
