--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,4 @@
-<h1 class="text-center mt-4" >Edit User</h1>
-<%= render 'form', user: @user %>
+ <% if logged_in? && @user == current_user%>
+  <h1 class="text-center mt-4" >Edit User</h1>
+  <%= render 'form', user: @user %>
+<%end%>
