--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <p id="notice"><%= notice %></p>
 <h2 class="text-center mt-4"><%=@user.username%></h2>
 <%= gravatar_for @user, size: 200%>
-<%= simple_format(@user.email) %>
-
+<h3 class="text-center"><%= simple_format(@user.email) %></h3>
+<div class="text-center">
+<%= link_to 'Edit your profile', edit_user_path, class:"btn btn-outline-info"%>
+</div>
 
 
 
@@ -18,8 +20,10 @@
             <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success"  %></h5>
             <p class="card-text"><%= truncate(article.description, length: 100) %></p>
             <%= link_to 'Show', article, class: "btn btn-outline-primary" %>
-            <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-success" %>
-            <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
+             <% if logged_in? && article.user == current_user%>
+              <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-success" %>
+              <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
+             <%end%>
           </div>
           <div class="card-footer text-muted">
             <small>Cerated <%= time_ago_in_words(article.created_at)%> ago   Updated <%= time_ago_in_words(article.updated_at)%> ago</small>
